manifest e description adicionados

--- a/telaContatosUteis.html
+++ b/telaContatosUteis.html
@@ -7,11 +7,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./Css/contatosUteis.css">
         <script src="https://kit.fontawesome.com/8fb7393afd.js" crossorigin="anonymous"></script>
+        <meta name="description" content="Contatos Úteis.">
+        <link rel="manifest" href="manifest.json">
         <title>Document</title>
     </head>
 
     <body>
-
+        <meta name="theme-color" content="#F5F5F5"/>
         <header>
             <a href="./telaPrincipal.html"><i class="fa-solid fa-arrow-left"></i></a>
             <div>
@@ -38,7 +40,7 @@
                 </div>
 
         </main>
-
+        
     </body>
 
 </html>
