--- a/telaCadastro.html
+++ b/telaCadastro.html
@@ -7,11 +7,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <link rel="stylesheet" href="./Css/telaLogin-Cadastro.css">
+        <meta name="description" content="Tela de Cadastro.">
+        <link rel="manifest" href="manifest.json">
     </head>
 
 
     <body>
-
+        <meta name="theme-color" content="#F5F5F5"/>
         <header>
             <h1 id="h1Cadastro">LOGO</h1>
         </header>
@@ -66,7 +68,7 @@
     
             </form>
         </main>
-
+        
     </body>
 
 </html>
