--- a/telaPrincipal.html
+++ b/telaPrincipal.html
@@ -4,11 +4,13 @@
 
     <head>
         <meta charset="UTF-8">
+        <meta name="description" content="Mapa.">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="manifest" href="manifest.json">
         <title>Document</title>
         <script src="mapa.js"></script>
-
+        
         <!-- ÍCONS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"">
 
@@ -30,6 +32,7 @@
     <script src="./Javascript/pontos.js"></script>
 
     <body>
+        <meta name="theme-color" content="#F5F5F5"/>
         <script src="./Javascript/responsividade.js"></script>
 
         <!-- CABEÇALHO DA PÁGINA -->
