Alteração no menu + Sombras

--- a/telaPrincipal.html
+++ b/telaPrincipal.html
@@ -52,6 +52,7 @@
                     <li><a href="">Sobre</a></li>
                 </ul>
            </nav>
+           <a href="./telaPrincipal.html" class="logo">Logo</a>
             
         </header>
 
