--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>LOGO</title>
         <link rel="stylesheet" href="./Css/telaLogin-Cadastro.css">
         <link rel="manifest" href="manifest.json">
         <meta name="description" content="Tela de Login.">
@@ -34,6 +34,7 @@
                 <br>
 
                 <!--CAMPO DE LOGIN - SENHA-->
+                <br>
                 <div class="campoInput">
                     <input type="password" name="senha" id="senha" placeholder="Digite sua senha"> 
                     <div class="underline"></div>
