telaConfig - Css header

--- a/telaConfig.html
+++ b/telaConfig.html
@@ -5,17 +5,22 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./Css/telaConfig.css">
+        <script src="https://kit.fontawesome.com/8fb7393afd.js" crossorigin="anonymous"></script>
         <title>Document</title>
     </head>
 
     <body>
 
         <header>
-            
+            <a href="./telaPrincipal.html"><i class="fa-solid fa-arrow-left"></i></a>
+            <div>
+                <a href="./telaPrincipal.html" class="logo">Logo</a>
+            </div>
         </header>
 
         <main>
-            
+
             <div class="configConta">
                 <h2>Configurações de conta</h2>
                 <hr>
