telaConfig - Css main

--- a/telaConfig.html
+++ b/telaConfig.html
@@ -13,7 +13,7 @@
     <body>
 
         <header>
-            <a href="./telaPrincipal.html"><i class="fa-solid fa-arrow-left"></i></a>
+            <a href="./telaPrincipal.html"><i class="fa-solid fa-arrow-left" id="voltar"></i></a>
             <div>
                 <a href="./telaPrincipal.html" class="logo">Logo</a>
             </div>
@@ -22,26 +22,28 @@
         <main>
 
             <div class="configConta">
-                <h2>Configurações de conta</h2>
+                <h3>Configurações de conta</h3>
                 <hr>
                 <div class="dentro">
                     <h4>Alterar senha</h4>
+                    <a href=""><i class="fa-solid fa-chevron-right" id="setinha"></i></a>
                 </div>
             </div>
 
             <div class="configPrivacidade">
-                <h2>Privacidade</h2>
+                <h3>Privacidade</h3>
                 <hr>
                 <div class="dentro">
                     <h4>Permitir localização</h4>
                 </div>
                 <div class="dentro">
                     <h4>Política de privacidade</h4>
+                    <a href=""><i class="fa-solid fa-chevron-right" id="setinha"></i></a>
                 </div>
             </div>
 
             <div class="configNotificacao">
-                <h2>Notificações</h2>
+                <h3>Notificações</h3>
                 <hr>
                 <div class="dentro">
                     <h4>Notificações padrão</h4>
