telaConfig - Css checkbox liga e desliga

--- a/telaConfig.html
+++ b/telaConfig.html
@@ -35,6 +35,11 @@
                 <hr>
                 <div class="dentro">
                     <h4>Permitir localização</h4>
+                    <div class="ligaDesliga">
+                        <input type="checkbox" class="check">
+                        <div class="botao"></div>
+                        <div class="circulo"></div>
+                    </div>
                 </div>
                 <div class="dentro">
                     <h4>Política de privacidade</h4>
@@ -47,8 +52,14 @@
                 <hr>
                 <div class="dentro">
                     <h4>Notificações padrão</h4>
+                    <div class="ligaDesliga">
+                        <input type="checkbox" class="check">
+                        <div class="botao"></div>
+                        <div class="circulo"></div>
+                    </div>
                 </div>
             </div>
+
 
         </main>
 
