Linkar a telaConfig a telaPrincipal

--- a/telaPrincipal.html
+++ b/telaPrincipal.html
@@ -47,7 +47,7 @@
                 <ul>
                     <li><a href="./telaContatosUteis.html">Contatos úteis</a></li>
                     <li><a href="">Fale conosco</a></li>
-                    <li><a href="">Configurações</a></li>
+                    <li><a href="./telaConfig.html">Configurações</a></li>
                     <li><a href="">Nos avalie</a></li>
                     <li><a href="">Sobre</a></li>
                 </ul>
