Botão aumentar -  1.5rem

--- a/telaContatosUteis.html
+++ b/telaContatosUteis.html
@@ -15,7 +15,7 @@
     <body>
         <meta name="theme-color" content="#F5F5F5"/>
         <header>
-            <a href="./telaPrincipal.html"><i class="fa-solid fa-arrow-left"></i></a>
+            <a href="./telaPrincipal.html"><i class="fa-solid fa-arrow-left" id="voltar"></i></a>
             <div>
                 <a href="./telaPrincipal.html" class="logo">Logo</a>
             </div>
