Link telefonável (eu acho)

--- a/telaContatosUteis.html
+++ b/telaContatosUteis.html
@@ -28,7 +28,7 @@
                         <h1>Defesa civil</h1>
                         <h5>Telefone: 199</h5>
                     </center>
-                    <a href=""><i class="fa-solid fa-phone"></i></a>
+                    <a href="tel:199"><i class="fa-solid fa-phone"></i></a>
                 </div>
 
                 <div class="campo">
@@ -36,7 +36,7 @@
                         <h1>Bombeiros</h1>
                         <h5>Telefone: 193</h5>
                     </center>
-                    <a href=""><i class="fa-solid fa-phone"></i></a></i>
+                    <a href="tel:193"><i class="fa-solid fa-phone"></i></a></i>
                 </div>
 
         </main>
