Botão de reportar

--- a/telaPrincipal.html
+++ b/telaPrincipal.html
@@ -25,6 +25,9 @@
         <link rel="stylesheet" href="./dist/MarkerCluster.css">
         <link rel="stylesheet" href="./dist/MarkerCluster.Default.css">
 
+        <!-- FONT AWESOME -->
+        <script src="https://kit.fontawesome.com/8fb7393afd.js" crossorigin="anonymous"></script>
+
     </head>
 
     <script src="./dist/leaflet.markercluster.js"></script>
@@ -86,6 +89,11 @@
             <!--############################################### 
                 ###            FIM DO SCRIPT                ###
                 ###############################################-->
+
+            <div class="reportCaixa">
+                <a href="" class="report"><i class="fa-solid fa-flag" id="flag"></i></a>
+                <h4>Relatar ponto</h4>
+            </div>
 
         </main>
         
