Criação telaReport + html + link telaPrincipal

--- a/telaPrincipal.html
+++ b/telaPrincipal.html
@@ -91,7 +91,7 @@
                 ###############################################-->
 
             <div class="reportCaixa">
-                <a href="" class="report"><i class="fa-solid fa-flag" id="flag"></i></a>
+                <a href="./telaReport.html" class="report"><i class="fa-solid fa-flag" id="flag"></i></a>
                 <h4>Relatar ponto</h4>
             </div>
 
