service-worker novo

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>LOGO</title>
+        <title>Login</title>
         <link rel="stylesheet" href="./Css/telaLogin-Cadastro.css">
         <link rel="manifest" href="manifest.json">
         <meta name="description" content="Tela de Login.">
+        <link rel="apple-touch-icon" sizes="180x180" href="icons/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon/favicon-16x16.png">
 
     </head>
 
@@ -16,7 +19,7 @@
     <body>
         <meta name="theme-color" content="#F5F5F5"/>
         <header>
-            <h1>LOGO</h1>
+            <h1>AlagaMaps</h1>
         </header>
 
         <!--CAIXA DE FORMULÁRIO-->
