--- a/telaCadastro.html
+++ b/telaCadastro.html
@@ -5,17 +5,20 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Cadastro</title>
         <link rel="stylesheet" href="./Css/telaLogin-Cadastro.css">
         <meta name="description" content="Tela de Cadastro.">
         <link rel="manifest" href="manifest.json">
+        <link rel="apple-touch-icon" sizes="180x180" href="icons/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon/favicon-16x16.png">
     </head>
 
 
     <body>
         <meta name="theme-color" content="#F5F5F5"/>
         <header>
-            <h1 id="h1Cadastro">LOGO</h1>
+            <h1 id="h1Cadastro">AlagaMaps</h1>
         </header>
 
         <!--CAIXA DE FORMULÁRIO-->
