--- a/telaConfig.html
+++ b/telaConfig.html
@@ -8,7 +8,10 @@
         <link rel="stylesheet" href="./Css/telaConfig.css">
         <script src="https://kit.fontawesome.com/8fb7393afd.js" crossorigin="anonymous"></script>
         <link rel="manifest" href="manifest.json">
-        <title>Document</title>
+        <link rel="apple-touch-icon" sizes="180x180" href="icons/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon/favicon-16x16.png">
+        <title>Configurações</title>
     </head>
 
     <body>
@@ -16,7 +19,7 @@
         <header>
             <a href="./telaPrincipal.html"><i class="fa-solid fa-arrow-left" id="voltar"></i></a>
             <div>
-                <a href="./telaPrincipal.html" class="logo">Logo</a>
+                <a href="./telaPrincipal.html" class="logo">AlagaMaps</a>
             </div>
         </header>
 
