--- a/telaPrincipal.html
+++ b/telaPrincipal.html
@@ -8,7 +8,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="manifest" href="manifest.json">
-        <title>Document</title>
+        <link rel="apple-touch-icon" sizes="180x180" href="icons/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon/favicon-16x16.png">
+        <title>Mapa</title>
         
         <!-- ÍCONS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"">
@@ -54,7 +57,7 @@
                     <li><a href="">Sobre</a></li>
                 </ul>
            </nav>
-           <a href="./telaPrincipal.html" class="logo">Logo</a>
+           <a href="./telaPrincipal.html" class="logo">AlagaMaps</a>
             
         </header>
 
