tela sobre conectada

--- a/telaPrincipal.html
+++ b/telaPrincipal.html
@@ -54,7 +54,7 @@
                     <li><a href="">Fale conosco</a></li>
                     <li><a href="./telaConfig.html">Configurações</a></li>
                     <li><a href="">Nos avalie</a></li>
-                    <li><a href="">Sobre</a></li>
+                    <li><a href="./telaSobre.html">Sobre</a></li>
                 </ul>
            </nav>
            <a href="./telaPrincipal.html" class="logo">AlagaMaps</a>
