--- a/telaPrincipal.html
+++ b/telaPrincipal.html
@@ -92,7 +92,28 @@
             <!--############################################### 
                 ###            FIM DO SCRIPT                ###
                 ###############################################-->
-
+                <script>
+                    let newWorker;
+        
+                    if ('serviceWorker' in navigator) {
+                      navigator.serviceWorker.register('/swbuilder.js').then(reg => {
+                        reg.addEventListener('updatefound', () => {
+                          // A wild service worker has appeared in reg.installing!
+                          newWorker = reg.installing;
+                          newWorker.addEventListener('statechange', () => {
+                            // Has network.state changed?
+        
+                          });
+                        });
+                      });
+                      let refreshing;
+                      navigator.serviceWorker.addEventListener('controllerchange', function () {
+                        if (refreshing) return;
+                        window.location.reload();
+                        refreshing = true;
+                      });
+                    }
+                </script>
             <div class="reportCaixa">
                 <a href="./telaReport.html" class="report"><i class="fa-solid fa-flag" id="flag"></i></a>
                 <h4>Relatar ponto</h4>
