telaReport caixa de input centralizada

--- a/telaReport.html
+++ b/telaReport.html
@@ -19,25 +19,28 @@
             </div>
         </header>
 
-        <main class="container">
-            <h2>Relatar ponto</h2>
-            <form action="">
+        <div class="tudo">
+            <main>
+                    <h2>Relatar ponto</h2>
+                    <form action="">
 
-                <!--CAMPO DE LOGIN - EMAIL-->
-                <div class="campoInput">
-                    <input type="text" placeholder="Digite a latitude">
-                    <div class="underline"></div>
-                </div>
+                        <!--CAMPO DE LOGIN - EMAIL-->
+                        <div class="campoInput">
+                            <input type="text" placeholder="Digite a latitude">
+                            <div class="underline"></div>
+                        </div>
 
-                <!--CAMPO DE LOGIN - SENHA-->
-                <div class="campoInput">
-                    <input type="text" placeholder="Digite a longitude"> 
-                    <div class="underline"></div>
-                </div>
+                        <!--CAMPO DE LOGIN - SENHA-->
+                        <div class="campoInput">
+                            <input type="text" placeholder="Digite a longitude"> 
+                            <div class="underline"></div>
+                        </div>
 
-                <input type="submit" value="Relatar ponto">
-
-        </main>
+                        <input type="submit" value="Relatar ponto">
+                    </form>
+                
+            </main> 
+        </div>
 
     </body>
 
