--- a/telaPrincipal.html
+++ b/telaPrincipal.html
@@ -35,6 +35,7 @@
 
     <script src="./dist/leaflet.markercluster.js"></script>
     <script src="./Javascript/pontos.js"></script>
+    <script type="module" src="./database/postgres_connection.js"></script>
 
     <body>
         <meta name="theme-color" content="#F5F5F5"/>
