--- a/telaReport.html
+++ b/telaReport.html
@@ -7,7 +7,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./Css/telaReport.css">
         <script src="https://kit.fontawesome.com/8fb7393afd.js" crossorigin="anonymous"></script>
-        <title>Document</title>
+        <link rel="apple-touch-icon" sizes="180x180" href="icons/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon/favicon-16x16.png">
+        <title>Reporte</title>
     </head>
 
     <body>
@@ -15,7 +18,7 @@
         <header>
             <a href="./telaPrincipal.html"><i class="fa-solid fa-arrow-left" id="voltar"></i></a>
             <div>
-                <a href="./telaPrincipal.html" class="logo">Logo</a>
+                <a href="./telaPrincipal.html" class="logo">AlagaMaps</a>
             </div>
         </header>
 
