Menu hamburger - telaConfig

--- a/telaConfig.html
+++ b/telaConfig.html
@@ -17,7 +17,21 @@
     <body>
 
         <header>
-            <a href="./telaPrincipal.html"><i class="fa-solid fa-arrow-left" id="voltar"></i></a>
+            <nav class="menu">
+                <input type="checkbox" class="menuTrigger">
+                <div class="linhas">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <ul>
+                    <li><a href="./telaContatosUteis.html">Contatos úteis</a></li>
+                    <li><a href="">Fale conosco</a></li>
+                    <li><a href="./telaConfig.html">Configurações</a></li>
+                    <li><a href="">Nos avalie</a></li>
+                    <li><a href="./telaSobre.html">Sobre</a></li>
+                </ul>
+           </nav>
             <div>
                 <a href="./telaPrincipal.html" class="logo">AlagaMaps</a>
             </div>
