Menu hamburger - telaSobre

--- a/telaSobre.html
+++ b/telaSobre.html
@@ -16,7 +16,21 @@
 
     <header> 
 
-        <a href="./telaPrincipal.html"><i class="fa-solid fa-arrow-left" id="voltar"></i></a>
+        <nav class="menu">
+            <input type="checkbox" class="menuTrigger">
+            <div class="linhas">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <ul>
+                <li><a href="./telaContatosUteis.html">Contatos úteis</a></li>
+                <li><a href="">Fale conosco</a></li>
+                <li><a href="./telaConfig.html">Configurações</a></li>
+                <li><a href="">Nos avalie</a></li>
+                <li><a href="./telaSobre.html">Sobre</a></li>
+            </ul>
+       </nav>
         <div>
            <a href="./telaPrincipal.html" class="logo">AlagaMaps</a>
         </div>
@@ -24,7 +38,7 @@
 
     <main class="container">
     <form>
-         <h4>A logo foi criada para te ajudar em dias difíceis e trazer mais comodidade para o seu dia a dia. </br> Tenha acesso a pontos de alagamentos e com isso ganhe a autonomia para escolher outras rotas. </br></h4>
+         <h4>O AlagaMaps foi criada para te ajudar em dias difíceis e trazer mais comodidade para o seu dia a dia. </br> Tenha acesso a pontos de alagamentos e com isso ganhe a autonomia para escolher outras rotas. </br></h4>
           <br><h5>Ao continuar você concorda com nossos <a href="#">Termos de Uso</a> e <a href="#">Política de Privacidade</a></h5><br>
     </form>
 
