--- a/telaConfig.html
+++ b/telaConfig.html
@@ -26,7 +26,7 @@
                 </div>
                 <ul>
                     <li><a href="./telaContatosUteis.html">Contatos úteis</a></li>
-                    <li><a href="">Fale conosco</a></li>
+                    <li><a href="./telaFaleConosco.html">Fale conosco</a></li>
                     <li><a href="./telaConfig.html">Configurações</a></li>
                     <li><a href="">Nos avalie</a></li>
                     <li><a href="./telaSobre.html">Sobre</a></li>
