--- a/telaPrincipal.html
+++ b/telaPrincipal.html
@@ -41,6 +41,21 @@
         <script src="./Javascript/responsividade.js"></script>
 
         <!-- CABEÇALHO DA PÁGINA -->
+        <script>
+            fetch('https://weather.contrateumdev.com.br/api/weather/city/?city=Recife,pernambuco').then(function (response) {
+            // The API call was successful!
+            return response.json();
+        }).then(function (data) {
+            // This is the JSON from our response
+            console.log(data.main.temp);
+            document.getElementById("temperatura").innerHTML = "Temperatura: " + data.main.temp + "°C";
+        }).catch(function (err) {
+            // There was an error
+            console.warn('Something went wrong.', err);
+        });
+                            
+        </script>
+
         <header>
            <nav class="menu">
                 <input type="checkbox" class="menuTrigger">
@@ -57,12 +72,15 @@
                     <li><a href="./telaSobre.html">Sobre</a></li>
                 </ul>
            </nav>
+           <p id = "temperatura" style = "color: aliceblue;"></p>
            <a href="./telaPrincipal.html" class="logo">AlagaMaps</a>
             
         </header>
 
         <main>
             <!-- O MAPA -->
+
+            </div>
             <div id="map"></div>        
 
             <!-- AQUI TEM TODA A INFORMAÇÃO DO LEAFLET, MARKER CLUSTER E OUTRAS COISAS DO MAPA -->
