--- a/telaPrincipal.html
+++ b/telaPrincipal.html
@@ -11,6 +11,8 @@
         <link rel="apple-touch-icon" sizes="180x180" href="icons/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon/favicon-16x16.png">
+        <meta name="theme-color" content="#4758F0"/>
+
         <title>Mapa</title>
         
         <!-- ÍCONS -->
