Delete css e html da tela report

--- a/telaReport.html
+++ b/telaReport.html
@@ -11,6 +11,10 @@
         <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon/favicon-16x16.png">
         <title>Reporte</title>
+
+        <!-- LEAFLET -->
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css" integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin="" />
+        <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js" integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin=""></script>
     </head>
 
     <body>
@@ -23,24 +27,7 @@
         </header>
 
         <div class="tudo">
-            <main>
-                    <h2>Relatar ponto</h2>
-                    <form action="">
-
-                        <!--CAMPO DE LOGIN - EMAIL-->
-                        <div class="campoInput">
-                            <input type="text" placeholder="Digite a latitude">
-                            <div class="underline"></div>
-                        </div>
-
-                        <!--CAMPO DE LOGIN - SENHA-->
-                        <div class="campoInput">
-                            <input type="text" placeholder="Digite a longitude"> 
-                            <div class="underline"></div>
-                        </div>
-
-                        <input type="submit" value="Relatar ponto">
-                    </form>
+            <main>  
                 
             </main> 
         </div>
