--- a/telaReport.html
+++ b/telaReport.html
@@ -15,6 +15,9 @@
         <!-- LEAFLET -->
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css" integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin="" />
         <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js" integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin=""></script>
+
+        <!-- ARQUIVOS CSS -->
+        <link rel="stylesheet" href="./Css/mapa.css">
     </head>
 
     <body>
@@ -26,11 +29,34 @@
             </div>
         </header>
 
-        <div class="tudo">
-            <main>  
+        <main>  
+            <!-- O MAPA -->
+            <div id="map"></div>    
+
+
+            <!--############################################### 
+                ###            SCRIPT JAVASCRIPT            ###
+                ###############################################-->
+
+            <script>
+
+                //Inicialização do mapa | [coordenadas], maxzoom
+                var map = L.map('map').setView([-8.052488, -34.885084], 13);
+
+                //Map layer
+                var Stadia_OSMBright = L.tileLayer('https://tiles.stadiamaps.com/tiles/osm_bright/{z}/{x}/{y}{r}.png', {
+                    maxZoom: 20,
+                    attribution: '&copy; <a href="https://stadiamaps.com/">Stadia Maps</a>, &copy; <a href="https://openmaptiles.org/">OpenMapTiles</a> &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors'
+                });
+                Stadia_OSMBright.addTo(map)
                 
-            </main> 
-        </div>
+            </script>
+
+            <!--############################################### 
+                ###            FIM DO SCRIPT                ###
+                ###############################################-->
+
+        </main> 
 
     </body>
 
