--- a/telaFaleConosco.html
+++ b/telaFaleConosco.html
@@ -24,6 +24,8 @@
                 <li><a href="./telaConfig.html">Configurações</a></li>
                 <li><a href="">Nos avalie</a></li>
                 <li><a href="./telaSobre.html">Sobre</a></li>
+                <li><a href="./index.html">Logout</a></li>
+
             </ul>
        </nav>
         <div>
