--- a/telaPrincipal.html
+++ b/telaPrincipal.html
@@ -55,6 +55,8 @@
                     <li><a href="./telaConfig.html">Configurações</a></li>
                     <li><a href="">Nos avalie</a></li>
                     <li><a href="./telaSobre.html">Sobre</a></li>
+                    <li><a href="./index.html">Logout</a></li>
+
                 </ul>
            </nav>
            <a href="./telaPrincipal.html" class="logo">AlagaMaps</a>
