--- a/index.html
+++ b/index.html
@@ -38,34 +38,35 @@
 
                 <!--CAMPO DE LOGIN - SENHA-->
                 <br>
+
                 <div class="campoInput">
                     <input type="password" name="senha" id="senhaLogin" placeholder="Digite sua senha"> 
                     <div class="underline"></div>
                 </div>
 
+                <!-- ESQUECEU SUA SENHA | ENTRAR SEM LOGIN -->
                 <div class="campoLink">
-                    <ul>
-                        <li><a href="./telaPrincipal.html">Entrar sem Login</a></li>
-                        <li><a href="./telaRecuperarSenha.html">Esqueceu sua senha?</a></li>
-                    </ul>
+                    <a href="./telaPrincipal.html" style="color: #f5f5f5 ;">Entrar sem Login</a>
+                    <div class="divisor"></div>
+                    <a href="./telaRecuperarSenha.html">Esqueceu sua senha?</a>
                 </div>
-
-                <!-- <input type="submit" value="Login"> -->
-
-                <div class="texto">
-                    <h5>Não tem uma conta?</h5>
-                </div>
-                
-
-                <div class="cadastre-se">
-                    <button>
-                        <a href="./telaCadastro.html">Cadastre-se</a>
-                    </button>
-                </div>
-                
 
             </form>
+
+            <!-- BOTÃO LOGIN -->
             <button class="buttonLogin" onclick="Checar()">Login</button>
+
+            <!-- REDIRECIONAMENTO PARA TELA CADASTRO -->
+            <div class="texto">
+                <h5>Não tem uma conta?</h5>
+            </div>
+
+            <div class="cadastre-se">
+                <button>
+                    <a href="./telaCadastro.html">Cadastre-se</a>
+                </button>
+            </div>
+
         </main>
         <script>
             async function clickbutton(){
