--- a/telaCadastro.html
+++ b/telaCadastro.html
@@ -50,26 +50,25 @@
                 </div>
 
                 <div class="campoLink">
-                    <ul>
-                        <li id="linkCadastro"><a href="./telaPrincipal.html">Entrar sem Login</a></li>
-                    </ul>
-                </div>
-
-                <!-- <input type="submit" value="Cadastrar" onclick="criarConta()"> -->
-                
-                <div class="texto">
-                    <h5>Já tem uma conta?</h5>
-                </div>
-
-
-                <div class="cadastre-se">
-                    <button>
-                        <a href="./index.html">Fazer login</a>
-                    </button>
+                    <a href="./telaPrincipal.html" style="color: #f5f5f5;">Entrar sem Login</a>
                 </div>
     
             </form>
+
+            <!-- Redirecionamento tela cadastro -->
             <button class="buttonLogin" onclick="criarConta()">Cadastrar</button>
+
+            <!-- <input type="submit" value="Cadastrar" onclick="criarConta()"> -->
+            <div class="texto">
+                <h5>Já tem uma conta?</h5>
+            </div>
+
+            <div class="cadastre-se">
+                <button>
+                    <a href="./index.html">Fazer login</a>
+                </button>
+            </div>
+
         </main>
         <script>
             async function paraLogin() {
