Menu hamburguer - icones em todas as telas

--- a/telaSobre.html
+++ b/telaSobre.html
@@ -24,12 +24,12 @@
                 <span></span>
             </div>
             <ul>
-                <li><a href="./telaPrincipal.html">Mapa</a></li>
-                <li><a href="./telaContatosUteis.html">Contatos úteis</a></li>
-                <li><a href="./telaFaleConosco.html">Fale conosco</a></li>
-                <li><a href="./telaConfig.html">Configurações</a></li>
-                <li><a href="">Nos avalie</a></li>
-                <li><a href="./index.html">Logout</a></li>
+                <li><a href="./telaPrincipal.html"><i class="fa-solid fa-map" id="iconeMenu"></i>Mapa</a></li>
+                    <li><a href="./telaContatosUteis.html"><i class="fa-solid fa-phone" id="iconeMenu"></i>Contatos úteis</a></li>
+                    <li><a href="./telaFaleConosco.html"><i class="fa-solid fa-comments" id="iconeMenu"></i>Fale conosco</a></li>
+                    <li><a href="./telaConfig.html"><i class="fa-solid fa-gear" id="iconeMenu"></i></i>Configurações</a></li>
+                    <li><a href=""><i class="fa-solid fa-star" id="iconeMenu"></i>Nos avalie</a></li>
+                    <li><a href="./index.html"><i class="fa-solid fa-right-from-bracket" id="iconeMenu"></i>Logout</a></li>
 
             </ul>
        </nav>
