Alterações para executar no localhost adicionadas

--- a/telaCadastro.html
+++ b/telaCadastro.html
@@ -94,7 +94,7 @@
                             "email":em,
                             "pwd":snh
                         });
-                        fetch("https://servidor-alagamaps.vercel.app/api/usuarios/criar", { 
+                        fetch("http://127.0.0.1:3000/api/usuarios/criar", { 
                             method: "POST",
                             body: bodyInformacoes,
                             headers: headerInformacoes
