--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         "pwd":`${password}`
                     });
                     
-                    let response = await fetch("https://servidor-alagamaps.vercel.app/api/usuarios/checar", { 
+                    let response = await fetch("http://127.0.0.1:3000/api/usuarios/checar", { 
                         method: "POST",
                         body: bodyContent,
                         headers: headersList
