--- a/telaReport.html
+++ b/telaReport.html
@@ -77,7 +77,7 @@
                                 "long":longitude,
                                 "lat":latitude
                             });
-                            fetch("https://servidor-alagamaps.vercel.app/api/pontos/criar", { 
+                            fetch("http://127.0.0.1:3000/api/pontos/criar", { 
                                 method: "POST",
                                 body: bodyInformacoes,
                                 headers: headerInformacoes
